--- a/src/app/common-project.scss
+++ b/src/app/common-project.scss
@@ -347,6 +347,10 @@
 	font-size: 18px;
 }
 
+.padding-b-0 {
+	padding-bottom: 0px;
+}
+
 .big-part:nth-child(even){
 	background: white;
 
@@ -609,7 +613,9 @@
 
 
 
-
+.sub-mid-title {
+	font-size: 18px;
+}
 
 
 * {
