--- a/src/app/dunhuang/dunhuang.component.scss
+++ b/src/app/dunhuang/dunhuang.component.scss
@@ -81,3 +81,10 @@ mark {
 .selected-stage-btn:hover {
 	background-color: $theme-color;
 }
+
+.decision-section {
+	background-color: $theme-color;
+	color: white;
+	text-align: center;
+	padding: 70px 100px 70px 100px;
+}
