--- a/src/app/itale/itale.component.html
+++ b/src/app/itale/itale.component.html
@@ -523,7 +523,36 @@
 					<img class="part-img margin-75" src="assets/img/itale-feedback.png">
 
 					<p class="sub-big-title"> <b> UX Iterations </b> </p>
-					<p>There are also iterations to be made: aside from feature-related concerns that have been incorporated in the last part, some other general UX issues include:</p>
+					<p class="margin-50">There are also iterations to be made: aside from feature-related concerns that have been incorporated in the last part, some other UX improvements include:</p>
+					<p><b>Improve canvas interaction</b></p>
+					<div class="row margin-75">
+						<div class="col-lg-8">
+							<img class="part-img" src="assets/img/itale-iteration-1.png">
+						</div>
+						<div class="col-lg-4">
+							From how participants naturally interacted with the physical prototype, we discovered some useful interactions to be included (e.g. zooming, moving 2 pieces at the same time). We also included visual guidance to make sure users will learn about these interactions. 
+						</div>
+					</div>
+
+					<p><b>Improve UX writing</b></p>
+					<div class="row margin-75">
+						<div class="col-lg-4">
+							<img class="part-img margin-5" src="assets/img/itale-iteration-2-1.png">
+							<p class="note-paragraph left-align padding-b-"> ✖️ Text is long in order to look more like real conversations, but this will put unnecessary cognitive burden on children. Also, the abrupt use of emoji can be misleading.</p>
+						</div>
+						<div class="col-lg-4">
+							<img class="part-img margin-5" src="assets/img/itale-iteration-2-2.png">
+							<p class="note-paragraph left-align"> ✅ Concise, unambiguous</p> 
+						</div>
+						<div class="col-lg-4">
+							<p>Parents and teachers provided many insights on how to talk to children:</p>
+							<ul>
+								<li>don't use too much text</li>
+								<li>use simple language</li>
+								<li>be concise and clear.</li>
+							</ul> 
+						</div>
+					</div>
 
 					<p class="sub-big-title"> <b> Shooting down fancy ideas </b> </p>
 					<p>During the project, we explored design directions broadly via brainstorming, and not all ideas passed through due to factors such as technical concerns and UX concerns. This was an example demonstrating how we handled such situation in general:</p>
