--- a/src/app/dunhuang/dunhuang.component.html
+++ b/src/app/dunhuang/dunhuang.component.html
@@ -177,28 +177,28 @@
 				<img class="part-img" src="assets/img/dh-storyline.png">
 				<div class="row margin-20 no-lr-margin">
 					<div class="col-lg-3 no-padding">
-						<div class= "center-align stage-btn" [ngClass]="{'selected-stage-btn' : isSelected1}">
+						<div class= "center-align stage-btn" [ngClass]="{'selected-stage-btn' : isSelected1}" (click)="selectStage(1)">
 							<span class="align-middle">
 								1. Enter spatial narrative
 							</span>
 						</div>
 					</div>
 					<div class="col-lg-3 no-padding">
-						<div class="center-align stage-btn" [ngClass]="{'selected-stage-btn' : isSelected2}">
+						<div class="center-align stage-btn" [ngClass]="{'selected-stage-btn' : isSelected2}" (click)="selectStage(2)">
 							<span class="align-middle">
 								2. Explore
 							</span>
 						</div>
 					</div>
 					<div class="col-lg-3 no-padding">
-						<div class="center-align stage-btn" [ngClass]="{'selected-stage-btn' : isSelected3}">
+						<div class="center-align stage-btn" [ngClass]="{'selected-stage-btn' : isSelected3}" (click)="selectStage(3)">
 							<span class="align-middle">
 								3. Donate and get a candle 
 							</span>
 						</div>
 					</div>
 					<div class="col-lg-3 no-padding">
-						<div class="center-align stage-btn" [ngClass]="{'selected-stage-btn' : isSelected4}">
+						<div class="center-align stage-btn" [ngClass]="{'selected-stage-btn' : isSelected4}" (click)="selectStage(4)">
 							<span class="align-middle">
 								4. Light up and share
 							</span>
@@ -207,7 +207,7 @@
 				</div>
 
 				<div class="mid-font-content">
-					<div class="row demo-section">
+					<div class="row demo-section" *ngIf="isSelected1">
 						<div class="col-lg-4 col-sm-4 demo-frame">
 							<img src="assets/img/iphone8-silver.png" class="demo-iphone-bg">
 							<img src="assets/img/dh-flow-start.gif" class="demo-animation">
@@ -217,6 +217,45 @@
 							<p class="demo-title"><b>1. Enter the panoramic cave space, and follow the narrative that brings you back to a thousand years ago.</b></p> 
 							<p class="demo-rationale-tag">Rationales</p>
 							<p class="demo-rationale">Connecting people with the space keep users engaged with the cultural heritage site. Also, the construction of narrative helps to guide users through the journey and provides a sense of ritual. </p>
+						</div>
+					</div>
+
+					<div class="row demo-section" *ngIf="isSelected2">
+						<div class="col-lg-4 col-sm-4 demo-frame">
+							<img src="assets/img/iphone8-silver.png" class="demo-iphone-bg">
+							<img src="assets/img/dh-flow-view.gif" class="demo-animation">
+						</div>
+						<div class="col-lg-1 col-sm-1"></div>
+						<div class="col-lg-6 col-sm-6 demo-intro">
+							<p class="demo-title"><b>2. Explore the cave space, the wallpaintings, the pieces that have been lighted up by others.</b></p> 
+							<p class="demo-rationale-tag">Rationales</p>
+							<p class="demo-rationale">Exploration is what lies between entry and donation, and it's the key in guiding new users to donate. Having the sense of community and better encourage users to join and be the next one to donate. The ritual atmosphere and the cave space both evoke respect for the cultural heritage, and guide users to better appreciate it. </p>
+						</div>
+					</div>
+
+					<div class="row demo-section" *ngIf="isSelected3">
+						<div class="col-lg-4 col-sm-4 demo-frame">
+							<img src="assets/img/iphone8-silver.png" class="demo-iphone-bg">
+							<img src="assets/img/dh-flow-donation.gif" class="demo-animation">
+						</div>
+						<div class="col-lg-1 col-sm-1"></div>
+						<div class="col-lg-6 col-sm-6 demo-intro">
+							<p class="demo-title"><b>3. As the guardian of the cave, donate different amount of money to light up a piece of wallpainting of different sizes.</b></p> 
+							<p class="demo-rationale-tag">Rationales</p>
+							<p class="demo-rationale">Donation is kept simple, clear, yet engaging to facilitate faster decision. Users get a good sense of what they will be getting in return of donation, but don't over-focus on the final result. </p>
+						</div>
+					</div>
+
+					<div class="row demo-section" *ngIf="isSelected4">
+						<div class="col-lg-4 col-sm-4 demo-frame">
+							<img src="assets/img/iphone8-silver.png" class="demo-iphone-bg">
+							<img src="assets/img/dh-flow-share.gif" class="demo-animation">
+						</div>
+						<div class="col-lg-1 col-sm-1"></div>
+						<div class="col-lg-6 col-sm-6 demo-intro">
+							<p class="demo-title"><b>4. Upon donation, the candle flies to the wall and light up the wallpainting. A certificate and a personalized report will be generated for sharing.</b></p>
+							<p class="demo-rationale-tag">Rationales</p>
+							<p class="demo-rationale">The process of lighting up wallpainting makes the experience consistent and complete. The rewards provide multiple ways for users to draw personal connection with the piece of wallpainting he/she lights up, making the experience satisfying that he/she would like to share. </p>
 						</div>
 					</div>
 				</div>
@@ -237,7 +276,7 @@
 		</div>
 
 
-		<div class="big-part big-part-3" id="big-part-3" #bigpart3>
+		<div class="big-part big-part-3 padding-b-0" id="big-part-3" #bigpart3>
 			<div class="big-part-inner">
 				<div class="big-part-head">
 					<p class="big-part-title"> Research </p>
@@ -352,7 +391,7 @@
 
 					<p class="sub-title"><b> Challenge 2 - Past Product Review </b></p>
 					<p class="sub-big-title"> What made existing charity products failed or successful? </p>
-					<div class="margin-100">
+					<div>
 						<div class="margin-50">
 							<p> We examined several existing online charity products in the market to learn about the general pattern, features that work well or not well under different context and topics. </p>
 
@@ -384,14 +423,17 @@
 							</div>
 						</div>
 					</div>
-
-					<p class="sub-big-title theme-text"><b> DESIGN DECISION #1 was made: </b></p>
-					<p class="sub-big-title"> Draw donors closer to the cultural heritage: to give back donors something meaningful that connects them with real-world cultural heritage. </p>
 				</div>
 			</div>
 		</div>
 
-		<div class="big-part big-part-2" id="big-part-2" #bigpart2>
+		<div class="decision-section">
+			<p class="sub-mid-title"><b> DESIGN DECISION #1 was made: </b></p>
+			<p class="sub-big-title margin-50"> Draw donors closer by giving them back something meaningful that connects them with real-world cultural heritage. </p>
+			<img class="img-20 margin-20" src="assets/img/dh-decision-1.png">
+		</div>
+
+		<div class="big-part big-part-2 padding-b-0" id="big-part-2" #bigpart2>
 			<div class="big-part-inner">
 				<div class="big-part-head">
 					<p><b>How did we continue along that line?</b></p>
@@ -433,7 +475,7 @@
 
 					</div>
 
-					<div class="row margin-100">
+					<div class="row margin-50">
 						<div class="col-lg-6">
 							<p class="note-paragraph"> Among all combinations, individuals collecting painting fragments is the one that establishes the strongest personal bond. </p>
 						</div>
@@ -443,14 +485,14 @@
 						</div>
 					</div>
 
-
-					<p class="sub-big-title theme-text"><b> DESIGN DECISION #2 was made: </b></p>
-					<p class="sub-big-title margin-50"> We decided to proceed with the candle lighting idea <span class="sub-big-sub-title">(upon every donation, a piece of Dunhuang artwork will be lighted up)</span> and developed tactics around it:  </p>
-
-					<img class="img-70 margin-50" src="assets/img/dh-ideation-result.png">
-
 				</div>
 			</div>
+		</div>
+
+		<div class="decision-section">
+			<p class="sub-mid-title"><b> DESIGN DECISION #2 was made: </b></p>
+			<p class="sub-big-title margin-50"> We decided to proceed with the candle lighting idea <span class="sub-big-sub-title">(upon every donation, a piece of Dunhuang artwork will be lighted up)</span> and developed tactics around it: </p>
+			<img class="img-50 margin-20" src="assets/img/dh-ideation-result.png">
 		</div>
 
 		<div class="big-part big-part-4" id="big-part-4" #bigpart4>
@@ -467,7 +509,7 @@
 						<p class="sub-title"><b> Set the product tone </b></p>
 						<p class="sub-big-title"> <b> Define Design Keywords </b> </p>
 
-						<div class="margin-50">
+						<div class="margin-100">
 							<p class="margin-50">To further develop the concept of lighting up Dunhuang, we analyze the features and strength of it, taking the design goals into consideration, and set the following design keywords to follow:</p>
 							
 							<img src="assets/img/dh-keywords.png" class="img-70">
@@ -476,7 +518,7 @@
 					</div>
 
 
-					<div>
+					<div class="margin-100">
 						<p class="sub-title"><b> Connect narrative, user goals, emotion, and product features  </b></p>
 						<p class="sub-big-title"> <b> Map out Journey </b> </p>
 
@@ -486,9 +528,9 @@
 							<img src="assets/img/dh-journey.png" class="part-img">
 							<!--<p class="note-paragraph"> How musicians and listeners value feedback </p> -->
 						</div>
+						<p>Below are some key design decisions we made along with rationales behind when designing the 3 key stages: <mark>pre-donation, donation, and post-donation</mark>.</p>
 					</div>
-
-					<p class="margin-75">Below are some key design decisions we made along with rationales behind when designing the 3 key stages: <mark>pre-donation, donation, and post-donation</mark>.</p>
+					
 
 					<div>
 						<div class="section">
@@ -497,7 +539,7 @@
 
 							<p><b>1. Construct concise yet engaging introduction</b></p>
 							<p>To increase the sense of engagement, it's important to design an emmersive opening experience with the use of storytelling. However, as we learned from previous products, it can't be long, or else users can be easily distracted and bored. We thus strived to <mark>make every screen count</mark>:</p>
-							<img src="assets/img/dh-decision-1-1.png" class="part-img margin-75">
+							<img src="assets/img/dh-decision-1-1.png" class="part-img margin-50">
 							<div class="row">
 								<div class="col-lg-6">
 									<p><b>2. Build up the sense of engagement and urgency</b></p>
@@ -589,10 +631,20 @@
 					</div>
 
 					<p class="sub-big-title"><b>Talking to developers and visual designers</b></p>
-					<p class="margin-100">As the interaction designer, I needed to communicate with visual designers and front-end developers to carry the project forward. The most important thing we discussed was the animation and atmosphere building. We discussed technical constraints (e.g. how to locate a piece of painting, how many pieces are there in a cave, etc.), as well as the ideal artstyle and user experience. </p>
+					<p class="margin-100">As the interaction designer, I needed to communicate with visual designers and front-end developers to carry the project forward. The most important thing we discussed was the <mark>animation and atmosphere building</mark>. We discussed <mark>technical constraints</mark> (e.g. how to locate a piece of painting, how many pieces are there in a cave, etc.), as well as the ideal <mark>artstyle and user experience</mark>. </p>
 
 					<p class="sub-big-title"><b>Talking to stakeholders</b></p>
-					<p>During the project, I presented the prototype to people in charge of Tencent-Dunhuang collaboration, from both Tencent and Dunhuang Academy. The feedback I got was mostly positive, and they would like to see more directions before making a decision, so I continued exploring other ideas to keep the conversation going.</p>
+					<p class="margin-50">During the project, I <mark>presented the prototype</mark> to people in charge of Tencent-Dunhuang collaboration, <mark>from both Tencent and Dunhuang Academy</mark>. The feedback I got was mostly positive, and they would like to see <mark>more directions</mark> before making a decision, so I continued exploring other ideas to keep the conversation going. Here are some other ideas we worked on afterwards:</p>
+					<div class="row margin-5 justify-content-center">
+						<div class="col-lg-3">
+							<img src="assets/img/dh-further-1.png" class="part-img">
+						</div>
+						<div class="col-lg-1">
+						</div>
+						<div class="col-lg-3">
+							<img src="assets/img/dh-further-2.png" class="part-img">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -604,9 +656,11 @@
 					<!--<p class="big-part-sub-title"> How did we come here </p>-->
 				</div>
 				<div class="mid-font-content">
+					<img src="assets/img/dh-cdc.png" class="part-img margin-5">
+					<p class="note-paragraph margin-75"> With all fantastic designers from Tencent CDC </p>
 					<ul>
 						<li><b>Impress your users quickly:</b> The most special thing about this project is, the touchpoint between users and the product is extremely short, that it's almost like an advertisement to convince customers into making purchase right away. Therefore, although the flow may look short, careful effort was put into the choice and distillation of information and interactions. We strived to utilize the short amount of time to provoke the right emotion and motivation.</li>
-						<li><b>Minding your company's business:</b> Particularly in big organizations, designers shouldn't make a product for the sake of the product. They have to think about the meaning of the product from a larger landscape: What values can this little product bring to the larger project? How may it affect the project/team/company from a long run? What type of image does it create for the company for audience to see?</li>
+						<li><b>Don't make a product for the sake of the product:</b> Particularly in big organizations, designers have to think about the meaning of the product from a larger landscape: What values can this little product bring to the larger project? How may it affect the project/team/company from a long run? What type of image does it create for the company for audience to see?</li>
 						<li><b>Not everyone is going to like your design, and that’s totally normal:</b> I was a bit frustrated when I received more feedback saying they probably won’t donate than I expected. I then came to realize that especially for a B2C product, it’s simply impossible to design something that caters to everyone’s taste and need. My mentor told me that phenomenal products were very rare, but if I manage to make 1% more people donate and 5% more people aware of the issue (of cultural heritage preservation), it’s considered a great success!</li>
 					</ul>
 				</div>
@@ -621,7 +675,7 @@
 			<div class="col-lg-3 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 				<div class="thumb-image square">
 					<div class="crop-img">
-						<a href="projects/dunhuang">
+						<a href="projects/itale">
 							<img src="assets/img/projectthumb-05.png">
 						</a>
 					</div>
